infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: aiclipse.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend: { service: { name: gateway-srv, port: { number: 8080 } } }
          - path: /
            pathType: Prefix
            backend: { service: { name: client-srv, port: { number: 3000 } } }
    - host: storage.aiclipse.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: s3-srv, port: { number: 9000 } } }
    - host: minio.aiclipse.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: s3-srv, port: { number: 9001 } } }
