infra/k8s-prod/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: mongo-express }
spec:
  replicas: 1
  selector: { matchLabels: { app: mongo-express } }
  template:
    metadata: { labels: { app: mongo-express } }
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1.0.2
          ports: [{ containerPort: 8081 }]
---
apiVersion: v1
kind: Service
metadata: { name: mongo-express-srv }
spec:
  selector: { app: mongo-express }
  ports: [{ port: 8081, targetPort: 8081 }]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ing
spec:
  ingressClassName: nginx
  rules:
    - host: mongoui.aiclipse.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-srv
                port: { number: 8081 }
